--- a/src/css/_style.scss
+++ b/src/css/_style.scss
@@ -216,9 +216,9 @@ h3 {
     }
 
     a {
-        text-decoration: none;
+        // text-: none;
         font-weight: bold;
-        color: inherit;
+        // color: inherit;
         font-stretch: expanded;
     }
 
