--- a/src/css/_style.scss
+++ b/src/css/_style.scss
@@ -68,7 +68,7 @@ header {
 
     h1 {
         text-align: center;
-        margin: 2rem 0 .5rem;
+        margin: 0;
         font-size: 3rem;
     }
 
@@ -77,37 +77,6 @@ header {
         font-size: 1.4rem;
         margin-bottom: .5rem;
     }
-
-    ul {
-        background-color: $nav-color;
-        padding: 0;
-        margin: 0;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        list-style-type: none;
-    }
-
-    li {
-        margin: 0;
-
-        a {
-            font-size: 2rem;
-            text-decoration: none;
-            color: $text-color;
-            padding: 0 2rem;
-            transition: background-color .5s linear;
-
-            &:hover {
-                background-color: $hover-color;
-            }
-
-        }
-
-
-    }
-
 }
 
 //stylar byt tema knappen så den följer schemat
@@ -119,8 +88,6 @@ header {
     font-size: 1rem;
     font-family: inherit;
 }
-
-
 
 // ärver .button
 #theme-toggle {
@@ -136,30 +103,6 @@ header {
         background-color: $hover-color;
     }
 }
-
-#animatestart {
-    @extend .button;
-    width: 150px;
-    margin: 10px 0;
-    background-color: var(--text-color);
-    color: var(--bg-color);
-    transition: background-color .5s linear;
-
-    &:hover {
-        background-color: $hover-color;
-    }
-}
-
-//Aktiv länk
-.activelink {
-    background-color: $active-color;
-
-    a {
-        font-weight: 500;
-        letter-spacing: .15rem;
-    }
-}
-
 
 main {
     flex: 1;
@@ -179,27 +122,6 @@ p {
     letter-spacing: .05rem;
 }
 
-h2,
-h3 {
-    margin: 1rem 0 .15rem 0;
-}
-
-#starttitle {
-    text-align: center;
-    font-size: 2.5rem;
-    margin: 1rem auto .5rem;
-}
-
-// texten i olika kolumner under #info
-.text-container {
-    column-count: 2;
-    /* Starta med 2 kolumner */
-    column-gap: 20px;
-    /* Avstånd mellan kolumner */
-    column-rule: 1px solid #ccc;
-    /* Linje mellan kolumner (valfritt) */
-}
-
 // scss style
 #info {
     border: 1px gray solid;
@@ -216,36 +138,24 @@ h3 {
     }
 
     a {
-        // text-: none;
-        font-weight: bold;
-        // color: inherit;
-        font-stretch: expanded;
+        font-size: 1.1rem;
     }
 
     ul {
         margin-left: 1.5em;
         line-height: 1.5rem;
-        font-size: 1.2rem;
     }
-
-    li {
-        font-size: .9rem;
-    }
-}
-
-fieldset, legend {
-    padding-left: .5rem;
 }
 
 #search-container {
     margin-bottom: 2px;
 
-    button, input{
-        // padding: .2rem;
+    button,
+    input {
         font-size: 1.1rem;
         padding: .2rem;
+        margin-bottom: .2rem;
     }
-
 }
 
 .smalltext {
@@ -254,112 +164,106 @@ fieldset, legend {
 
 #map {
     width: 100%;
-    height: 100vh;
+    height: 80vh;
 }
 
+//Förökt till att överta stylingen från leaflet.css
 .leaflet-popup {
-    overflow: visible !important; /* Säkerställer att popupen visas korrekt */
-    z-index: 10000; /* För att popupen ska ligga ovanför andra element */
+    overflow: visible !important;
+    z-index: 10000;    
 }
-
-
 
 fieldset {
+    padding-left: .5rem;
+    legend {
+        padding-left: .5rem;
+    }
     display: flex;
-    flex-direction: column; 
-    gap: 2px; 
+    flex-direction: column;
+    gap: 2px;
+    margin-bottom: .2rem;
+    label {
+        display: inline;
+    }
+    input[type="checkbox"] {
+        margin-right: 8px;
+    }
+    
 }
 
-fieldset label {
-    display: inline; 
+#search-box {
+    max-width: 100%;
 }
 
-fieldset input[type="checkbox"] {
-    margin-right: 8px; 
+//Väderbehållare
+#weatherPopup {
+    background-color: #ffffff;
+    color: black;
+    display: none;
+    width: 80%; 
+    position: absolute;
+    top: 20%; 
+    left: 50%; 
+    transform: translateX(-50%); 
+    z-index: 1000;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 8px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+
+    #closePopup {
+        float: right;
+    }
+}
+//En rad med väder på popupen
+.weatherrow {
+    p {
+        margin-bottom: 0;
+    }
+
+    .weather {
+        display: inline-block;
+        width: 4rem;
+        text-align: left;
+    }
+
+    .temp {
+        display: inline-block;
+        width: 9rem;
+        text-align: left;
+    }
+
+    .symbol {
+        display: inline-block;
+        width: 4rem;
+        text-align: center;
+        animation: pulse 1.5s infinite;
+    }
 }
 
-.symbol {
-    display: inline-block;
-    animation: pulse 1.5s infinite;
-}
-
+// Animering på vädersymbolerna
 @keyframes pulse {
-    0%, 100% {
+
+    0%,
+    100% {
         transform: scale(1);
     }
+
     50% {
-        transform: scale(1.2); /* Gör symbolen större till 120% av dess ursprungliga storlek */
+        transform: scale(1.2);
     }
 }
-
-.spin {
-    display: inline-block;
-    animation: spin 2s linear infinite;
-}
-
-@keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
-}
-
-.rain {
-    display: inline-block;
-    position: relative;
-    overflow: hidden;
-}
-
-.raindrop {
-    position: absolute;
-    top: 0;
-    animation: fall 1s linear infinite;
-}
-
-@keyframes fall {
-    0% {
-        top: -20px; /* Startar utanför synfältet */
-        opacity: 0;
-    }
-    50% {
-        opacity: 1;
-    }
-    100% {
-        top: 100px; /* Faller ner utanför synfältet */
-        opacity: 0;
-    }
-}
-
 
 /* Vid små skärmar */
 @media (max-width: 768px) {
     fieldset {
-        flex-direction: column; 
+        flex-direction: column;
     }
 
     fieldset div {
-        display: flex; 
-        align-items: center; 
+        display: flex;
+        align-items: center;
     }
-}
-
-
-
-
-//Footer
-footer {
-    background-color: var(--footer-color);
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: clamp(500px, 90%, 1400px);
-    height: 4em;
-    margin: 0 auto;
-    display: flex;
-    padding: 2rem 1rem;
-    text-align: center;
 }
 
 // Övertag om denna klassen så att darkmode fungerar
@@ -376,7 +280,6 @@ footer {
     #info {
         width: 92%;
     }
-
     header {
         h1 {
             font-size: 2.5rem;
@@ -406,20 +309,48 @@ footer {
         font-size: 1rem;
     }
 
+    #info {
+        a {
+            font-size: .9rem;
+        }
+    }
+
+    #weatherPopup {
+        width: 95%;
+        top: 10%;   
+
+    }
+
+    .weatherrow {
+
+        p {
+            font-size: .8rem;
+        }
+
+        .weather {
+            width: 3rem;
+        }
+
+        .temp {
+            width: 6rem;
+        }
+
+        .symbol {
+            width: 2rem;
+        }
+    }
 }
 
 @media screen and (max-width: 700px) {
 
-    // flytta knappen så den motsvarar placeringen av menyn 
     #theme-toggle {
         top: 0;
         left: 0;
+        padding: 2px 4px;
+        hover {
+            background-color: var(--text-color);
+        }
     }
-
-    .text-container {
-        column-count: 1;
-    }
-
 }
 
 
@@ -430,25 +361,31 @@ footer {
         background-color: color.adjust($primary-color, $lightness: -00%)
     }
 
-    header h1 {
-        font-size: 1.8rem;
-        margin-top: 3rem;
+    header {
+        h1 {
+            font-size: 1.4rem;
+            margin-top: .1rem;
+        }
+        h2 {
+            display: none;
+        }
     }
 
-    ul li a {
-        font-size: 1.8rem;
-        padding: 0.1rem;
+    #search-container {
+        margin-bottom: 2px;
+    
+        button,
+        input {
+            font-size: .8rem;
+            padding: .2rem;
+            margin-bottom: .2rem;
+        }
+    
     }
-
+    
     main {
         padding: .5rem;
         max-width: 100%;
-    }
-
-    #starttitle {
-        text-align: center;
-        font-size: 1.4rem;
-        margin: 1rem auto .5rem;
     }
 
     p {
@@ -458,26 +395,43 @@ footer {
         letter-spacing: normal;
     }
 
-    h1 {
-        font-size: 1.4rem;
+  
+    #info {
+        width: 98%;
+        padding-top: 0;
+        h2{
+            display: none;
+        }
     }
+    
+    .weatherrow {
 
-    h2 {
-        font-size: 1.3rem;
-    }
+        p {
+            font-size: .75rem;
+        }
 
-    h3 {
-        font-size: 1.2rem;
+        .weather {
+            width: 2.2rem;
+        }
+
+        .temp {
+            width: 5rem;
+        }
+
+        .symbol {
+            width: 2.6rem;
+            font-size: .7rem;
+        }
+
     }
 
     #info {
-        width: 98%;
+        a {
+            font-size: .8rem;
+        }
     }
 
-    #theme-toggle:hover {
-        background-color: var(--text-color);
+    .leaflet-popup-content {
+        max-width: 250px; /* Begränsar bredden */
     }
-
-
-
 }
