--- a/src/css/_mapanimate.scss
+++ b/src/css/_mapanimate.scss
@@ -41,17 +41,13 @@
         visibility: visible;
     }
 }
-.leaflet-popup-content {
-    width: fit-content;
-    max-height: 260px; /* Begränsar höjden */
-    overflow-y: auto; /* Gör att innehållet kan skrollas */
-}
+
 
 
 .leaflet-popup-content-wrapper {
-    position: relative;
-    z-index: 2000;
-    overflow: visible;
+    // position: relative;
+    // z-index: 2000;
+    // overflow: visible;
     animation: bounce 2s ease-out;
 }
 
