--- a/src/css/_style.scss
+++ b/src/css/_style.scss
@@ -187,13 +187,24 @@ p {
 #map {
     width: 100%;
     height: 80vh;
+    transform-origin: center;
+    animation: flipInXY 3s linear forwards;
 }
 
-//Förökt till att överta stylingen från leaflet.css
-// .leaflet-popup {
-//     overflow: visible !important;
-//     z-index: 10000;    
-// }
+
+//popupen från leaflet
+.leaflet-popup-tip {
+    opacity: 0;
+    visibility: hidden;
+    animation: showtip 2s 1s forwards;
+}
+
+
+
+
+.leaflet-popup-content-wrapper {
+    animation: bounce 2s ease-out;
+}
 
 fieldset {
     padding-left: .5rem;
@@ -272,19 +283,6 @@ fieldset {
     }
 }
 
-
-// Animering på vädersymbolerna
-@keyframes pulse {
-
-    0%,
-    100% {
-        transform: scale(1);
-    }
-
-    50% {
-        transform: scale(1.2);
-    }
-}
 
 /* Vid små skärmar */
 @media (max-width: 768px) {
