--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,7 +1,7 @@
 @use "style";
 // @use "mobilemenu";
 //@use "picture";
-@use "mapanimate";
+//@use "mapanimate";
 @use "animations";
 
 /* Huvudscss*/
